# P-2_Real_Agentic-AI-Chatbot-on-JAP

./: .gitignore  README.md  af.txt  main.py  pyproject.toml  requirements.txt
src/Constants/: __init__.py
src/ETL/ETL_config/: __init__.py
src/ETL/ETL_constants/: __init__.py
src/ETL/ETL_main/: __init__.py  etl_main.py  transcipt.py
src/ETL/ETL_utils/: __init__.py
src/Entity/: config_entity.py
src/Exception/: exception.py
src/Logging/: logger.py
